--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "express": "~4.13.1",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.13.0",
+    "google-auth-library": "^0.10.0",
+    "googleapis": "^20.1.0",
     "hbs": "~3.1.0",
     "mongoose": "^4.5.1",
     "mongoose-findorcreate": "^0.1.2",
