--- a/package.json
+++ b/package.json
@@ -6,25 +6,12 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "@slack/client": "^3.10.0",
     "body-parser": "~1.13.2",
-    "connect-mongo": "^1.3.2",
-    "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
-    "express-handlebars": "^3.0.0",
     "express-session": "^1.13.0",
     "google-auth-library": "^0.10.0",
-    "googleapis": "^20.1.0",
-    "hbs": "~3.1.0",
-    "mongoose": "^4.5.1",
-    "mongoose-findorcreate": "^0.1.2",
-    "morgan": "~1.6.1",
-    "multer": "^1.1.0",
-    "passport": "^0.3.2",
-    "passport-facebook": "^2.1.1",
-    "passport-local": "^1.0.0",
-    "sendgrid": "^3.0.5",
-    "twilio": "^2.9.1",
-    "underscore": "^1.8.3"
+    "googleapis": "^20.1.0"
   }
 }
