--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "~4.13.1",
     "express-session": "^1.13.0",
     "googleapis": "^20.1.0",
+    "moment": "^2.18.1",
     "mongoose": "^4.11.3"
   }
 }
